--- a/src/sections/ShyBall/styles.css
+++ b/src/sections/ShyBall/styles.css
@@ -14,10 +14,10 @@
     background: white;
     
     border-radius: 50%;
-    -webkit-transition: 0.4s ease-in-out;
-    -moz-transition: 0.4s ease-in-out;
-    -o-transition: 0.4s ease-in-out;
-    transition: 0.4s ease-in-out;
+    -webkit-transition: 1s linear;
+    -moz-transition: 1s linear;
+    -o-transition: 1s linear;
+    transition: 1s linear;
     box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
 
   
