--- a/src/sections/ShyBall/styles.css
+++ b/src/sections/ShyBall/styles.css
@@ -11,7 +11,6 @@
     
     width: 50px;
     height:50px;
-    background: white;
     
     border-radius: 50%;
     -webkit-transition: 1s linear;
@@ -26,27 +25,11 @@
 .ball::after {
     top: 15px;
     margin-left: 2px;
-    
+    scale: 2;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
     content: attr(aftercontent-ball)
-}
-@keyframes pulse {
-	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-	}
-
-	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-	}
-
-	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-	}
 }
